# tde-stm32l432

./: CMakeLists.txt  LICENSE  build.conf
app/: CMakeLists.txt
app/busmem/: CMakeLists.txt  busmem.cfg  cmd.c  cmd.h  errors.h  i2c.c  i2c.h  main.c  tools.h  trace.c  trace.h  usb.c  usb.h
app/cxx/: CMakeLists.txt
app/cxx/src/: main.cxx
app/usb-cdc/: CMakeLists.txt  main.c  tools.h  usb-cdc.cfg  usbcfg.c
config/: chconf.h  halconf.h  mcuconf.h
os/: CMakeLists.txt
os/common/: CMakeLists.txt
os/common/ext/CMSIS/include/: cmsis_gcc.h  core_cm4.h
os/common/ports/ARMCMx/: chcore.h  chcore_v7m.h
os/common/startup/ARMCMx/compilers/GCC/: crt0_v7m.S  vectors.S
os/common/startup/ARMCMx/compilers/GCC/ld/: rules_code.ld
os/hal/: CMakeLists.txt  hal.mk
os/hal/include/: hal.h  hal_i2c.h  hal_i2cslave.h
os/hal/ports/STM32/LLD/ADCv3/: hal_adc_lld.c  hal_adc_lld.h
os/hal/ports/STM32/LLD/I2Cv2/: hal_i2c_lld.c  hal_i2c_lld.h
os/hal/ports/STM32/LLD/USBv1/: hal_usb_lld.h
os/hal/ports/STM32/STM32L4xx/: platform.mk  platform_l432.mk
os/hal/src/: hal_i2c.c
os/license/: chversion.h
os/nil/: CMakeLists.txt  nil.mk
os/nil/include/: ch.h
os/rt/: CMakeLists.txt  rt.mk
os/rt/include/: ch.h
os/rt/src/: chschd.c
os/various/: CMakeLists.txt
os/various/shell/: shell_cmd.c
